--- a/src/chromium/manifest.json
+++ b/src/chromium/manifest.json
@@ -1,26 +1,25 @@
 {
-    "manifest_version": 2,
-    "name": "Czo Gruvbox64 Theme",
-    "version": "1.2",
-    "theme": {
-        "colors": {
-            "toolbar": [ 80, 73, 69 ],
-            "frame": [ 40, 40, 40 ],
-            "ntp_background": [ 40, 40, 40 ],
-            "ntp_text": [ 251,241,199 ],
-            "tab_text": [ 251,241,199 ],
-            "bookmark_text": [235, 219, 178 ],
-            "tab_background_text": [235, 219, 178 ],
-            "tab_background_text_inactive": [235, 219, 178 ],
-            "tab_background_text_incognito": [235, 219, 178 ],
-            "tab_background_text_incognito_inactive": [235, 219, 178 ]
-        },
-        "tints": {
-            "buttons": [  0.12, 0.9, 0.8 ],
-            "frame_inactive": [ -1, -1, -1 ],
-            "frame_incognito": [ -1, -1, -1 ],
-            "frame_incognito_inactive": [ -1, -1, -1 ]
-        }
+  "manifest_version": 2,
+  "name": "Czo Gruvbox64 Theme",
+  "version": "1.4",
+  "theme": {
+    "colors": {
+      "toolbar": [80, 73, 69],
+      "frame": [40, 40, 40],
+      "ntp_background": [40, 40, 40],
+      "ntp_text": [251, 241, 199],
+      "tab_text": [251, 241, 199],
+      "bookmark_text": [235, 219, 178],
+      "tab_background_text": [235, 219, 178],
+      "tab_background_text_inactive": [235, 219, 178],
+      "tab_background_text_incognito": [235, 219, 178],
+      "tab_background_text_incognito_inactive": [235, 219, 178]
+    },
+    "tints": {
+      "buttons": [0.12, 0.9, 0.8],
+      "frame_inactive": [-1, -1, -1],
+      "frame_incognito": [-1, -1, -1],
+      "frame_incognito_inactive": [-1, -1, -1]
     }
+  }
 }
-
