--- a/src/firefox/manifest.json
+++ b/src/firefox/manifest.json
@@ -1,46 +1,47 @@
 {
   "manifest_version": 2,
   "name": "Czo Gruvbox64 Theme",
-  "version": "1.5",
+  "version": "1.6",
   "theme": {
     "colors": {
-      "icons": "rgb(201, 183, 136)",
-      "popup_text": "rgb(201, 183, 136)",
-      "tab_background_separator": "rgb(201, 183, 136)",
-      "tab_background_text": "rgb(201, 183, 136)",
-      "button_background_active": "rgb(102, 92, 84)",
-      "button_background_hover": "rgb(80, 73, 69)",
-      "sidebar": "rgb(60, 56, 54)",
-      "toolbar": "rgb(60, 56, 54)",
-      "tab_selected": "rgb(60, 56, 54)",
-      "toolbar_top_separator": "rgb(60, 56, 54)",
-      "frame_inactive": "rgb(40, 40, 40)",
-      "frame": "rgb(40, 40, 40)",
-      "ntp_background": "rgb(40, 40, 40)",
-      "popup_border": "rgb(102, 92, 84)",
-      "popup_highlight_text": "rgb(40, 40, 40)",
-      "popup": "rgb(40, 40, 40)",
-      "sidebar_border": "rgb(40, 40, 40)",
-      "sidebar_highlight_text": "rgb(40, 40, 40)",
-      "tab_line": "rgb(40, 40, 40)",
-      "toolbar_bottom_separator": "rgb(40, 40, 40)",
-      "toolbar_field_border": "rgb(40, 40, 40)",
-      "toolbar_field_focus": "rgb(40, 40, 40)",
-      "toolbar_field": "rgb(40, 40, 40)",
-      "ntp_text": "rgb(251, 241, 199)",
-      "sidebar_text": "rgb(251, 241, 199)",
-      "tab_text": "rgb(251, 241, 199)",
-      "toolbar_field_highlight_text": "rgb(251, 241, 199)",
-      "toolbar_field_text_focus": "rgb(251, 241, 199)",
-      "toolbar_field_text": "rgb(251, 241, 199)",
-      "toolbar_text": "rgb(251, 241, 199)",
-      "toolbar_vertical_separator": "rgb(251, 241, 199)",
-      "icons_attention": "rgb(104, 157, 106)",
-      "popup_highlight": "rgb(104, 157, 106)",
-      "sidebar_highlight": "rgb(104, 157, 106)",
-      "tab_loading": "rgb(104, 157, 106)",
-      "toolbar_field_border_focus": "rgb(104, 157, 106)",
-      "toolbar_field_highlight": "rgb(104, 157, 106)"
+      "icons": "#c9b788",
+      "popup_text": "#c9b788",
+      "tab_background_separator": "#c9b788",
+      "tab_background_text": "#c9b788",
+      "button_background_hover": "#504945",
+      "sidebar": "#3c3836",
+      "toolbar": "#3c3836",
+      "tab_selected": "#3c3836",
+      "toolbar_top_separator": "#3c3836",
+      "frame_inactive": "#282828",
+      "frame": "#282828",
+      "ntp_background": "#282828",
+      "button_background_active": "#665c54",
+      "popup_border": "#665c54",
+      "popup_highlight_text": "#282828",
+      "popup": "#282828",
+      "sidebar_border": "#282828",
+      "sidebar_highlight_text": "#282828",
+      "tab_line": "#282828",
+      "toolbar_bottom_separator": "#282828",
+      "toolbar_field_border": "#282828",
+      "toolbar_field_focus": "#282828",
+      "toolbar_field": "#282828",
+      "ntp_text": "#fbf1c7",
+      "sidebar_text": "#fbf1c7",
+      "tab_text": "#fbf1c7",
+      "toolbar_field_highlight_text": "#fbf1c7",
+      "toolbar_field_text_focus": "#fbf1c7",
+      "toolbar_field_text": "#fbf1c7",
+      "toolbar_text": "#fbf1c7",
+      "toolbar_vertical_separator": "#fbf1c7",
+      "tab_multiselected": "#689d6a",
+      "icons_attention": "#689d6a",
+      "popup_highlight": "#689d6a",
+      "sidebar_highlight": "#689d6a",
+      "tab_loading": "#689d6a",
+      "toolbar_field_border_focus": "#689d6a",
+      "toolbar_field_highlight": "#689d6a"
     }
   }
 }
